network_policy/ingress-disable.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
spec:
  # 選擇所有的 pod
  podSelector: {}
  policyTypes:
  - Ingress
  # 拒絕所有從外面進來的網路流量(不設定 ingress)
  #pod cannot block access to itself
